--- a/_posts/thesis_chapters/2024-10-5-Design.md
+++ b/_posts/thesis_chapters/2024-10-5-Design.md
@@ -307,7 +307,7 @@ For some, this sense of a achievement appeared magnified by difficulty caused by
 <!-- This aligns with educational research of the value of incorporating Funds of Knowledge into technical learning environments [Cole etc]. -->
 <!-- While the value of this process seems clear from existing research, it presented challenges and design tensions in this learning design. -->
 
-**Simple block graphics**
+<!-- **Simple block graphics** -->
 
 <!-- In P1 a template based on tutorial used stock graphics of a astronaut collecting stars on platforms resembling earth and grass. -->
 <!-- The overall simplification reduced and therefore rebalanced time spent on to this activity compared to other game coding processes, thus helping resolve one of the tensions emerging in P1. -->
@@ -319,27 +319,19 @@ Figure 5.px - Interface of Piskelapp tool
 
 <!-- DROP shift to appendix? I had previously set the dimensions of the matrix above based on this size to create a resulting game size of 550, 400, in line with a retro game style.  -->
 
-Despite the efforts to simplify the process, the process of swapping in new graphical assets is (outlined in Appendix 5.tech) still required a series of potentially tricky operations.
+Despite the efforts to simplify the process, the process of swapping in new graphical assets is (outlined in Appendix 5.tech) still required a series of potentially tricky operations made more complicated by the distributed nature of the process. While some novice code authoring tools adopt a self-contained to audio and graphical asset creation and by providing in-built authoring tools and a library of assets, the code playground Glitch provided neither, thus requiring the use of external asset creation tools.
 
-Participants would identify the need for an asset in their game. They would then use the separate software to create that asset, and the be supported to save assets to their computer's hard drive in a compatible format. They would then need to upload assets to the code playground environment, discover the text link of the asset, and then insert that link into the main JavaScript game file at the relevant line of code.
-In terms of audio assets Despite
+The forced choice to use a distributed toolset rather than black-boxing asset management and migration led to benefits in developing key digital literacy needed for web creation. The strong motivation to see your assets in the game drove participants to building fluency (aligned with Webmaker ethos) as undertaking the full process involved learning a complex chain of these individual actions. Some participants became remarkably adapt at this, thus transforming this chain of actions into a fluid operation. Participants would identify the need for an asset in their game. They would then use the separate software to create that asset, and the be supported to save assets to their computer's hard drive in a compatible format. They would then need to upload assets to the code playground environment, discover the text link of the asset, and then insert that link into the main JavaScript game file at the relevant line of code.
 
-**Distributed approach to asset creation**
+ <!-- thus reducing possibility for errors and complexity caused by the compatibility of file formats, migration and management of external asset files. While  -->
 
-Tools like Scratch [@payne2019music] adopt a self-contained to audio and graphical asset creation and provide a library of prebuilt assets and tools within the environment thus reducing possibility for errors and complexity caused by the compatibility of file formats, migration and management of external asset files. While the code playground Glitch provided some tools to help manage files, it could not create or edit audio or graphical files, requiring the use of external asset creation tools.
-
-The forced choice to use a distributed toolset rather than black-boxing asset management and migration led to benefits in developing key digital literacy needed for web creation. The strong motivation to see your assets in the game drove participants to building fluency (aligned with Webmaker ethos) as undertaking the full process involved learning a complex chain of these individual actions. Some participants became remarkably adapt at this, thus transforming this chain of actions into a fluid operation.  
-
-OPERATIONS - WHERE
-THIS IS THE PLACE - MOVE OTHER MENTIONS HERE IF POSSIBLE
-
-MOVE?
-Participants spent a widely different length of time creating these graphics for a variety of reasons. Some took a long time to master the process of using the editing tool while others created images rapidly but would keep redesigning and recreating their game elements. The process of game art creation opportunities seeding narrative and artistic creativity is explored in more detail in chapter five.
-
-_Seeding narrative and art creativity_
-As they had been guided to make a game on a broadly environmental theme, participants often redesigned sprites to games involving animals. The following image shows a whale as a player character and plastic bottles.
+<!-- MOVE? CHAPTER 5?
+Participants spent a widely different length of time creating these graphics for a variety of reasons. Some took a long time to master the process of using the editing tool while others created images rapidly but would keep redesigning and recreating their game elements.  -->
 
 ![](./Pictures/whale_1.png){width=50%}
+Figure 5.fish - a sample set of assets created in Piskel in the context of a working platform game created by child in P2
+
+In P2, participants were guided to make a game on a broadly environmental theme, participants often redesigned sprites to games involving animals. Figure 5.fish shows a whale as a player character and plastic bottles as a hazard and fish as an item to collect. The process of game art and audio creation opportunities seeding narrative and artistic creativity is explored in more detail in Chapter 5.
 
 <!-- In line with existing research, in P1 I observed participant showing a high motivation to incorporate assets based on their hope interests. Responding to the enthusiasm of participants in asset creation, I had introduced six software tools to participants including tools for pixel art, sound editing, sound creation, In addition I also encouraged collage creation to create a physical background to the game and then scan that to create a digital image. A table of the different tools and processes is included as appendix 4.x   -->
 
@@ -348,15 +340,16 @@ As they had been guided to make a game on a broadly environmental theme, partici
 <!-- For example, the processes of replacing a block image with a bespoke pixel sprite which comprised: file downloading; file migration using the browser and file manager; browser tab navigation; graphics tool use in Piskel; copying and paste text code; and selecting more than one lines of text code with mouse or keyboard shortcuts. -->
 
 
+#### Resolution of C1 / re-framing using key terminology /  LINK
+
+<!-- The in-tool affordances were designed to allow a quicker building of participant familiarity with the toolset via aligning with changes which were familiar from home experience of games and which were simple to change and provoking high feedback from the target game. -->
+This section has outlined the rationale driving the introduction and initial expansion of the form of primary tools in P1 and P2.
 
 
 
-#### Resolution of C1 / LINK
+It begins to explore the use of simple, high impact affordances which leverage home knowledge of gameplay concepts. While this chapter has a focus on design narrative, rather than impact, these aspects are explored in more depth in Chapter 6.
 
-This section has outlined rationale driving the introduction and initial expansion of the form of primary tools in phases one and two of the game making programme. The in-tool affordances were designed to allow a quicker building of participant familiarity with the toolset via aligning with changes which were familiar from home experience of games and which were simple to change and provoking high feedback from the target game.
-
-The change to a half-baked template also reduced the average working group size thus increasing the number of games being worked on as a whole.
-This change addressed issues of some being alienated from the group process if not working on the code changes, and also responded to the suggestion of introduction coding tools early to avoid the mismatch between participant planning and the technical limits of the coding possible at this novice level. However, the positive impact also had unintended consequences. The increased number of projects in play increased the demand on my time as a technical trouble shooter of code problems. The next section addresses this tension and other related to the introduction of supporting forms of documentation.  
+The change to a half-baked template had unintended consequences. Some positive, it  reduced the average working group size thus increasing the number of games being worked on as a whole and thus  helped issues of some being alienated from the group process if not working on the code changes, and also responded to the suggestion of introduction coding tools early to avoid the mismatch between participant planning and the technical limits of the coding possible at this novice level. Some were negative as he increased number of projects in play increased the demand on my time as a technical trouble shooter of code problems. The next section addresses this tension and other related to the introduction of supporting forms of documentation.  
 
 
 ### C2 - Contradictions associated with project navigation and use of documentation
