end of c1 start of c2

--- a/_posts/thesis_chapters/2024-10-5-Design.md
+++ b/_posts/thesis_chapters/2024-10-5-Design.md
@@ -296,7 +296,7 @@ This adaptation is one example of how a technical solution had a positive impact
 
 The technical changes to the template also made it easier to swap in graphical assets created by participants.
 
-##### Use of game assets - EDIT DOWN
+##### Design tensions in the authoring and incorporation of game assets
 
 My observations in P1 aligned with research on the motivational value of the ability for young people to bring their interests into multimedia creations via choice of assets and narratives [@kajamaa_digital_2018; @resnick2014give; @peppler_supergoo_2007]. A full table of the tools used and their purposes created to help orientate participants in P1 are outlined in 5.tech. The use of many production processes and asset creation tools in P1 complicated the object of activity in a way which I evaluated as negatively impacting the leading activity and motivation of making a game to share. Thus in P2 I reduced the number of suggested tool address this overcomplication. I now outline and discuss the use of simple block graphics, the use of pixel art authoring tool, and wider asset creation approaches.
 
@@ -340,38 +340,32 @@ In P2, participants were guided to make a game on a broadly environmental theme,
 <!-- For example, the processes of replacing a block image with a bespoke pixel sprite which comprised: file downloading; file migration using the browser and file manager; browser tab navigation; graphics tool use in Piskel; copying and paste text code; and selecting more than one lines of text code with mouse or keyboard shortcuts. -->
 
 
-#### Resolution of C1 / re-framing using key terminology /  LINK
+<!-- #### Resolution of C1 / re-framing using key terminology /  LINK -->
 
 <!-- The in-tool affordances were designed to allow a quicker building of participant familiarity with the toolset via aligning with changes which were familiar from home experience of games and which were simple to change and provoking high feedback from the target game. -->
-This section has outlined the rationale driving the introduction and initial expansion of the form of primary tools in P1 and P2.
-
-
-
-It begins to explore the use of simple, high impact affordances which leverage home knowledge of gameplay concepts. While this chapter has a focus on design narrative, rather than impact, these aspects are explored in more depth in Chapter 6.
-
-The change to a half-baked template had unintended consequences. Some positive, it  reduced the average working group size thus increasing the number of games being worked on as a whole and thus  helped issues of some being alienated from the group process if not working on the code changes, and also responded to the suggestion of introduction coding tools early to avoid the mismatch between participant planning and the technical limits of the coding possible at this novice level. Some were negative as he increased number of projects in play increased the demand on my time as a technical trouble shooter of code problems. The next section addresses this tension and other related to the introduction of supporting forms of documentation.  
-
+This section has outlined the rationale driving the introduction and initial expansion of the form of primary tools in P1 and P2. This chapter has a focus on design narrative rather than evidencing impact, thus participants interaction with the simple, high impact affordances aimed to lever home knowledge of gameplay concepts is explored in more depth in Chapter 6. The introduction of a half-baked template and UMC approach had the unintended consequences of reducing the average working group size  helped issues of some being alienated from the group process if not working on the code changes, and  also helped by introducing coding tools early thus avoiding the mismatch between participant planning and the technical limits of the novice ability. However, an additional negative consequence of the greater the number of games being worked was an increased demand on my time as a technical trouble shooter of code problems. The next section addresses this tension and others related to the introduction of supporting forms of documentation.  
 
 ### C2 - Contradictions associated with project navigation and use of documentation
 
-#### Description of contradictions related to documentation
 
 <!-- The previous section addresses changes to primary tools used to create game code and assets and response to the emerging tensions experienced by participants in P1. -->
 
-The design of the in-tool scaffolding within primary tool outlined in the previous section aligns with microworld concepts [@laurillard2020significance] of affordances guiding learners towards the exploration of key concepts and reduced reliance on facilitator instruction in the use and modify stage of a UMC approach. However, these design changes did not aid participants wanting to implement new features or add code structures into their game, as aligned with the _Create_ stage of UMC.
+The in-tool scaffolding within primary tool outlined in the previous section aligns with microworld concepts  of affordances guiding learners towards the exploration of key concepts and reduced reliance on facilitator instruction [@laurillard2020significance], an alignment explored in more detail in this chapters' discussion. However, these design changes did not aid participants wanting to implement new features or add code structures into their game, as aligned with the _Create_ stage of UMC.
 
-However, these design changes did not aid participants wanted to create new features or code structures in their game. In P1 and early in P2 this caused delays and participant frustration, as although I could work with people directly to help them I had limited time with each participant or pair.
+However, these design changes did not aid participants who wanted to create new features or code structures in their game. In P1 and early in P2 this caused delays and participant frustration, as although I could work with people directly to help them I had limited time with each participant or pair. Additionally, my responsive approach to documentation in P1 lacked coherence in approach and lacked a system for users to navigate the resources created.
 
-Additionally , the piecemeal approach to documentation, especially when combined with the disparate approach to graphical and audio asset creation, had resulted in an overly complex object.
+REWORD
+While step by step instruction could build up experience with tools and concepts in a carefully structured way, I wanted to preserve the  choice driven approach and motivational potential of hands-on   project-based approaches employed in P1 [@holstermann_hands-activities_2010].  
 
-Such complexity could be addressed by step by step instruction to build up experience with tools and concepts in a carefully structured way. However, I was keen to align with the motivational potential of hands-on (learning by experience) and choice driven approaches to project-based, STEM education [@holstermann_hands-activities_2010].  
-
+<!-- or a nagivational , especially when combined with the disparate approach to graphical and audio asset creation, had resulted in an overly complex object. -->
 <!-- DOES THE LR EXPLORE THIS TENSION? -->
 <!-- PERHAPS? ILLUSTRATE THIS WITH A TRIANGLE - see notes 23.8.24 -->
 
 **Summary of start of resolution**
 
-In the development period (D1) between P1 and P2 I undertook extensive planning of both the starter template and documentation processes. The tension between learner agency and clarity of instruction and support reoccurs consistently in my notes at this time. My thinking was influenced by trials in P1 of whole class instruction of key coding concepts that I judged to be relevant to the whole group. My journal notes reflecting on these interventions were unfavourable, in that learners were not engaged, perhaps not seeing that instruction as immediately relevant, alien to their favoured hands on style of working, and as an interruption to the  flow of their making activities.
+I had been reflecting on the development period (D1) after P1 and at the start of P2. The tension between learner agency and clarity of instruction and support reoccurs consistently in my notes at this time.
+
+My thinking was influenced by trials in P1 of whole class instruction of key coding concepts that I judged to be relevant to the whole group. My journal notes reflecting on these interventions were unfavourable, in that learners were not engaged, perhaps not seeing that instruction as immediately relevant, alien to their favoured hands on style of working, and as an interruption to the  flow of their making activities.
 
 However, there had been a request from some from parents in the feedback to P1 (see appendix 4.x) to provide background concepts and explanations of coding constructs.
 
