--- a/_posts/thesis_chapters/2024-10-5-Design.md
+++ b/_posts/thesis_chapters/2024-10-5-Design.md
@@ -236,9 +236,7 @@ Addressing the evolution in design and use of code and asset authoring tools, wh
 
 The initial use of a code playground and starting template was based on my previous experience of teaching javascript to novices [@chesterman_webmaking_2015]. Code playgrounds, as described in chapter two, are an online environment used to test, share or invite help from online users on complete or partial code projects or problems. They are used primarily for web-based project involving the technologies of HTML, css and variations of JavaScript (for more detail see Appendix 5.tech).  
 
-The use of code playgrounds by novices can mitigate against some of the initial challenges provided by learning computer coding stemming from  unfamiliarity with and potential complexity of code authoring tools and environments [@guzdial_programming_2004]. Tactics to mitigated against challenging elements include steps to reducing syntax errors, shielding complexity, facilitating community commenting, sharing, remixing and other forms of collaboration.
-
-In D1 I proactively reached out to Mozilla to ask about the future of Thimple, my choice of codeplayground, and was informed that it would soon be _sunsetted_ (discontinued) due to end of funding. Their suggested replacement Gitch.com had a wider user base (beyond educators) and similar functionality.    
+The use of code playgrounds by novices can mitigate against some of the initial challenges provided by learning computer coding stemming from  unfamiliarity with and potential complexity of code authoring tools and environments [@guzdial_programming_2004]. Tactics to mitigated against challenging elements include steps to reducing syntax errors, shielding complexity, facilitating community commenting, sharing, remixing and other forms of collaboration. In D1 I proactively reached out to Mozilla to ask about the future of Thimble, the code playground used in P1 and was informed that it would soon be _sunsetted_ (discontinued) due to end of funding. Their suggested replacement Glitch.com had a wider user base (beyond educators) and similar functionality.    
 
 <!-- **Starting template** -->
 
