--- a/_posts/thesis_chapters/2024-10-5-Design.md
+++ b/_posts/thesis_chapters/2024-10-5-Design.md
@@ -352,8 +352,7 @@ The in-tool scaffolding within primary tool outlined in the previous section ali
 
 However, these design changes did not aid participants who wanted to create new features or code structures in their game. In P1 and early in P2 this caused delays and participant frustration, as although I could work with people directly to help them I had limited time with each participant or pair. Additionally, my responsive approach to documentation in P1 lacked coherence in approach and lacked a system for users to navigate the resources created.
 
-REWORD
-While step by step instruction could build up experience with tools and concepts in a carefully structured way, I wanted to preserve the  choice driven approach and motivational potential of hands-on   project-based approaches employed in P1 [@holstermann_hands-activities_2010].  
+
 
 <!-- or a nagivational , especially when combined with the disparate approach to graphical and audio asset creation, had resulted in an overly complex object. -->
 <!-- DOES THE LR EXPLORE THIS TENSION? -->
@@ -363,22 +362,18 @@ While step by step instruction could build up experience with tools and concepts
 
 I had been reflecting on the development period (D1) after P1 and at the start of P2. The tension between learner agency and clarity of instruction and support reoccurs consistently in my notes at this time.
 
-My thinking was influenced by trials in P1 of whole class instruction of key coding concepts that I judged to be relevant to the whole group. My journal notes reflecting on these interventions were unfavourable, in that learners were not engaged, perhaps not seeing that instruction as immediately relevant, alien to their favoured hands on style of working, and as an interruption to the  flow of their making activities.
+REWORD
+While step by step instruction could build up experience with tools and concepts in a carefully structured way, I wanted to preserve the choice driven approach and motivational potential of hands-on  project-based approaches employed in P1 [@holstermann_hands-activities_2010].  
 
-However, there had been a request from some from parents in the feedback to P1 (see appendix 4.x) to provide background concepts and explanations of coding constructs.
+My thinking was influenced by trials in P1 of whole class instruction of key coding concepts that I judged to be relevant to the whole group. My journal notes reflecting on these interventions were unfavourable, in that learners were not engaged, perhaps not seeing that instruction as immediately relevant, alien to their favoured hands on style of working, and as an interruption to the flow of their making activities.
 
-To address this I wrote an instruction manual consisting of step-by-step series of instructional chapters detailing the structure of the core template. After completing this, I decided its linear structure, which prevented a learner-led approach, was unsuitable for use in sessions.
+However, there had been a request from some from parents in the feedback to P1 (see appendix 4.x) to provide background concepts and explanations of coding constructs. To address this I wrote an instruction manual consisting of step-by-step series of instructional chapters detailing the structure of the core template.
+
+While the linear structure, which prevented a learner-led approach, was unsuitable for use in sessions, it acted as a work through at home resource to back up in session experimentation. 
 
 LINK SENTENCE
 
 The following section outline three main sources of documentation: quick start cards, written instructions and code snippets.
-
-<!--
-![](./Pictures/quickstart_phaser_1.png){width=50%} -->
-
-<!-- As outlined above the starter template and quick activities served to address the _use_ and _modify_ stages of the UMC approach. One seeded into the community, these processes also propagated via peer learning in ways which are explored in chapters five in six. In contrast, the _create_ stage required longer input from my self, to help participants with their individual choices of what to add to the game.-->
-
-<!-- SHIFT? - It is notable that the create stage of this model does not involve starting a totally new game from scratch as is imagined in some interpretations of that model. Due to the complexity of the code base and framework the process of creating a new GDP within the game as a suitable level of challenge. -->
 
 <!-- ##### Linear and stand-alone tutorials and code snippet resources -->
 
@@ -518,6 +513,8 @@ The value of peer social experiences which emerged naturally at in P2 was such t
 Starting from a playable if incomplete game and adapting it, greatly increased the amount of time participants spent playtesting their own and other games. I noted my own concern if errors compounded to make the participants game unplayable for any extended time. In video data, participants show frustration if not able to playtest game due to errors (for a clear example see Olivia and Suzanna's frustration in Appendix 5.x.)
 
 My broad observations align with / EXTEND? the supported benefits outlined in research on the Use-Modify-Create (UMC)  [-@lytle_use_2019-1] and particularly the technique of starting with  half baked games [@grizioti_game_2018-1]. IT THIS RIGHT? OR DO THEY ADD ANYTHING?
+
+<!-- SHIFT? - It is notable that the create stage of this model does not involve starting a totally new game from scratch as is imagined in some interpretations of that model. Due to the complexity of the code base and framework the process of creating a new GDP within the game as a suitable level of challenge. -->
 
 In P2, while the process of peer playtesting was encouraged it was not explicitly guided. Fortuitously, complex patterns of playtesting emerged rapidly which are explored in chapter 7.
 
