--- a/_posts/thesis_chapters/2024-10-5-Design.md
+++ b/_posts/thesis_chapters/2024-10-5-Design.md
@@ -350,30 +350,22 @@ This section has outlined the rationale driving the introduction and initial exp
 
 The in-tool scaffolding within primary tool outlined in the previous section aligns with microworld concepts  of affordances guiding learners towards the exploration of key concepts and reduced reliance on facilitator instruction [@laurillard2020significance], an alignment explored in more detail in this chapters' discussion. However, these design changes did not aid participants wanting to implement new features or add code structures into their game, as aligned with the _Create_ stage of UMC.
 
-However, these design changes did not aid participants who wanted to create new features or code structures in their game. In P1 and early in P2 this caused delays and participant frustration, as although I could work with people directly to help them I had limited time with each participant or pair. Additionally, my responsive approach to documentation in P1 lacked coherence in approach and lacked a system for users to navigate the resources created.
-
-
+However, these design changes did not aid participants who wanted to create new features or code structures in their game. In P1 and early in P2 this caused delays and participant frustration, as although I could work with people directly to help them I had limited time with each participant or pair. Additionally, my responsive approach to instruction and documentation in P1 lacked coherence in approach and lacked a system for users to navigate the resources created.
 
 <!-- or a nagivational , especially when combined with the disparate approach to graphical and audio asset creation, had resulted in an overly complex object. -->
 <!-- DOES THE LR EXPLORE THIS TENSION? -->
 <!-- PERHAPS? ILLUSTRATE THIS WITH A TRIANGLE - see notes 23.8.24 -->
 
-**Summary of start of resolution**
+In the development period (D1) after P1 reflection on the tension between learner agency (in particular the role of divergent participant learning paths) and clarity of instruction and support reoccurs consistently in my notes at this time.
 
-I had been reflecting on the development period (D1) after P1 and at the start of P2. The tension between learner agency and clarity of instruction and support reoccurs consistently in my notes at this time.
+<!-- REWORD
+While step-by-step instruction could build up experience with tools and concepts in a carefully structured way, I wanted to preserve the choice driven approach and motivational potential of hands-on  project-based approaches employed in P1 [@holstermann_hands-activities_2010].   -->
 
-REWORD
-While step by step instruction could build up experience with tools and concepts in a carefully structured way, I wanted to preserve the choice driven approach and motivational potential of hands-on  project-based approaches employed in P1 [@holstermann_hands-activities_2010].  
+My reflection was partly driven by two attempts in P1 of whole class instruction of key coding concepts that I judged to be relevant to the wider group. My journal notes reflecting on these interventions were unfavourable, in that learners were not engaged, perhaps not seeing that instruction as immediately relevant, alien to their favoured hands on style of working, and as an interruption to the flow of their making activities.
 
-My thinking was influenced by trials in P1 of whole class instruction of key coding concepts that I judged to be relevant to the whole group. My journal notes reflecting on these interventions were unfavourable, in that learners were not engaged, perhaps not seeing that instruction as immediately relevant, alien to their favoured hands on style of working, and as an interruption to the flow of their making activities.
+I struggled with how to resolve this experiences with requests from some from parents in the feedback to P1 (see appendix 4.x) to provide background concepts and explanations of coding constructs. To address this I wrote an instruction manual consisting of step-by-step series of instructional chapters detailing the structure of the core template. While the linear structure did not align with my aim of choice-led approach face to face sessions, I imagined it as an additional resource to reinforce learning at home.
 
-However, there had been a request from some from parents in the feedback to P1 (see appendix 4.x) to provide background concepts and explanations of coding constructs. To address this I wrote an instruction manual consisting of step-by-step series of instructional chapters detailing the structure of the core template.
-
-While the linear structure, which prevented a learner-led approach, was unsuitable for use in sessions, it acted as a work through at home resource to back up in session experimentation. 
-
-LINK SENTENCE
-
-The following section outline three main sources of documentation: quick start cards, written instructions and code snippets.
+The design and implementation of supporting resources continued to evolve at a frantic pace at the start of P2 and I finally created three main sources of documentation: quick start cards, written instructions and code snippets which are outline in the following section.
 
 <!-- ##### Linear and stand-alone tutorials and code snippet resources -->
 
@@ -383,15 +375,16 @@ by Mozilla and the Phaser developers. -->
 #### Forms of Documentation which addressed contradictions
 
 
-##### Quick Start Cards
+**Quick Start Cards:**
 
-During the development period D1, I used the revised template design in a one-off game making with computer trainee teacher computing students. I ended with a challenge to create an activity for one-off holiday activities around creative game coding for families. In response, three students created printable word documents highlighting key affordances of the design in a way which mirrored my facilitation of their game making session. Specifically, the printed resources highlighted the key lines of code and how they can be altered to impact on game behaviour (see figure 5.x below). These _quick start_ cards supported participants initial interaction with the code in a way strongly aligned with the _use_ and _modify_ stages of the UMC framework [@franklin_analysis_2020].
+Quick start cards, supporting simple print outs drawing attehntion to key affordances of the template outline above, became a key resource used to get started in using the starting template game.  During the development period D1, I used the revised template design in a one-off game making with computer trainee teacher computing students. I ended with a challenge to create an activity for one-off holiday activities around creative game coding for families. In response, three students created printable word documents highlighting key affordances of the design in a way which mirrored my facilitation of their game making session. Specifically, the printed resources highlighted the key lines of code and how they can be altered to impact on game behaviour (see figure 5.x below).
 
 ![](./Pictures/velocity_jscard.png){width=95%}
 4.x - Example of a Quick start card
 
-At this stage the options involved, the game mechanics of movement, jumping, level design, and final challenge to swap out the look of one or more of the characters by designing pixel art, and swapping out the line of code that adds the asset to the game. A current version of the quick start cards are availble online at the online technical repository for this study [^] ADD THE LINK HERE.
+At this stage the options involved, the game mechanics of movement, jumping, level design, and final challenge to swap out the look of one or more of the characters by designing pixel art, and swapping out the line of code that adds the asset to the game. A current version of the quick start cards are available online at the online technical repository for this study [^] ADD THE LINK HERE.
 
+These _quick start_ cards supported participants initial interaction with the code in a way strongly aligned with the _use_ and _modify_ stages of the UMC framework [@franklin_analysis_2020]. The start process addressed the tension concerning the issue of providing documentation with support for users to be able complete coding tasks but also facilitate choice over learner pathways. 
 
 ##### Structuring instructional tutorial resources and code snippets
 
@@ -399,7 +392,9 @@ At this stage the options involved, the game mechanics of movement, jumping, lev
 
 <!-- While writing self-contained tutorials added a challenge to the documentation authouring process, the documents, especially when printed became a vital resource for this community. In chapter 5 I explore the extent to which these resources can scale for use beyond this context. -->
 
-The quick start process helped resolved a key tensions concerting the issue of providing documentation with support for users to be able complete coding tasks but also facilitate choice over learner pathways. When revisiting the unsuitability of the step-by-step manual created in the D1 development period, I noted that the process of writing chapters yielded an interesting technique. For each new stage, I illustrated the concepts in practice using a new code playground project for each chapter, one which illustrated the key feature being added in as much isolation as possible but within a working game template.
+
+
+When revisiting the unsuitability of the step-by-step manual created in the D1 development period, I noted that the process of writing chapters yielded an interesting technique. For each new stage, I illustrated the concepts in practice using a new code playground project for each chapter, one which illustrated the key feature being added in as much isolation as possible but within a working game template.
 
 I created a series of stand alone code playground projects which code snippets which mirrored the simplified approach of the quick start cards. Namely, with project listed the different feature it would add to the game and highlighted the snippets of code in the project needed to do this.
 
